# resident-schedule-optimizer-public

./: README.md  pyproject.toml
src/: all_schedules.py  common.py  csv_utils.py  flow_solver.py  group_schedules.py  preferences.csv  solve.py
writeup-html/lib/: metadata.json
